# HW3-Clustering

./: README.md  pyproject.toml  requirements.txt  testing_ground.ipynb
.github/workflows/: test.yml
cluster/: __init__.py  kmeans.py  silhouette.py
test/: test_kmeans.py  test_silhouette.py
